# cytomine-platform

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  build.gradle  build.sh  cronfile  cytomine_mongo_backup.sh  cytomine_postgis_backup.sh  flake.nix  gitlab-ci.yml  mongo-entrypoint.sh  nginx-entrypoint.sh  pims-config.env  pims-dev-config.env  requirements.txt  root  settings.gradle  setup.py
.github/workflows/: app-engine.yaml  build-and-push-docker-images.yaml  cbir.yml  core.yaml  docker.yaml  ims.yaml  installer.yaml  pull-request.yaml  quality-installer.yaml  quality-ui.yaml  test-ae.yaml  test-core.yaml  test-installer.yaml  test-ui.yaml  test.yaml  validation.yaml  web-ui.yaml
app-engine/: .gitignore  .redocly.lint-ignore.yaml  CHANGELOG.md  Dockerfile  build.gradle
app-engine/dev/: docker-compose.yml
cbir/: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  weights.dvc
cbir/.dvc/: config
cbir/.github/actions/setup/: action.yml
cbir/.github/workflows/: check-quality.yml  create-release.yml  docker.yml  test.yml
cbir/cbir/: __init__.py  app.py  cbir.py  config.py  utils.py
cbir/cbir/api/: __init__.py  image.py  images.py  index.py  searches.py  storages.py
cbir/cbir/api/utils/: models.py  utils.py
cbir/cbir/models/: hoptimus.py  model.py  resnet.py  utils.py
cbir/cbir/retrieval/: database.py  indexer.py  retrieval.py  store.py  utils.py
cbir/tests/: __init__.py  conftest.py  test_retrieval.py  test_search.py  test_storage.py
cm_configs_default/www/: version.json.sample
config/: checkstyle.xml
configs/: kc_config.json
core/: .gitignore  Dockerfile  build.gradle  docker-compose.yml
cytomine-community-edition/: .gitignore  cytomine-dev  cytomine.template  docker-compose.dev.yml  docker-compose.yml
cytomine-community-edition/cache/: README.md
cytomine-community-edition/dev/: docker-compose.override.ae.yaml  docker-compose.override.core.yaml  docker-compose.override.iam.yaml  (+2 more)
dev/: .gitignore  README.md  cytomine-dev
docker/: Dockerfile  backend.dockerfile
files/: backup-cron-job  check-backup-folder.sh  check_dbs_users.sh  cytomine-mongo-backup.sh  cytomine-mongo-restore.sh  cytomine-postgis-backup.sh  cytomine-postgis-restore.sh  cytomine_mongo_backup.sh  cytomine_postgis_backup.sh  cytomine_postgis_restore.sh  initdb-cytomine-extensions.sh  initdb-cytomine-user-appengine.sh  initdb-cytomine-user-docker.sql  initdb-cytomine-user-postgres.sql  initdb-cytomine-users.sh  initdb-cytomine.sh  mongo.logrotate  postgres.conf  postgres.default.conf  start-crond.sh
helpers/: reconfigure_rerun.sh
iam/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md
mongo/: Dockerfile
nginx/: .gitlab-ci.yml  Dockerfile  README.md
pims/: .gitignore  .gitlab-ci.yml  Dockerfile  application.py  config.py  fastapi_tweaks.py  logging-debug.yml  logging-prod.yml  logging.yml  pims-config.env  pims-dev-config.env  setup.py
postgis/: .gitlab-ci.yml  Dockerfile
tests/: pims-config.env  test_api_utils_parameter.py  test_formats_utils_structures_pyramid.py  test_jpeg.py  test_png.py  test_processing_adapters.py  test_tiff.py
web-ui/: Dockerfile  package-lock.json  package.json
(+524 files in other folders)
